--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ css:
 ---
 
 <div class="center-and-center">
-    <h1>THE LAB IS</h1>
+    <h1>WORK IN PROGRESS</h1>
     <p><span style="color: red;">• </span> offline</p>
 </div>
